<resources>
    <string name="app_name">Wewalk</string>
    <string name="title_challenges">Leaderboard</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_mine">Profile</string>
    <string name="title_goals">Goals</string>
    <string name="login_title">Log In</string>
    <string name="username">User name</string>
    <string name="password">Password</string>
    <string name="confirm_password">double comfirm</string>
    <string name="login">Sign in</string>
    <string name="no_account">Don\'t have an account? Register</string>
</resources>